# webgpufundamentals

./: .gitignore  README.md  build.sh  custom-app.html  custom-app.js  fundamentals.js  index.css  index.html  index.js  index.scss  inter_stage_variables.js  package.json  storage_buffers.js  styles.scss  uniforms.js  vite.config.js
chapters/: fundamentals.js  inter_stage_variables.js  loading_images.js  storage_buffers.js  textures.js  uniforms.js  vertex_buffers.js
wasm_modules/: build.sh
wasm_modules/fundamentals/: Cargo.toml
wasm_modules/fundamentals/shader/: compute.wgsl  render.wgsl
wasm_modules/fundamentals/src/: lib.rs
wasm_modules/inter_stage_variables/: Cargo.toml
wasm_modules/inter_stage_variables/shader/: render.wgsl  vert.wgsl
wasm_modules/inter_stage_variables/src/: lib.rs
wasm_modules/loading_images/: Cargo.toml
wasm_modules/loading_images/shader/: render.wgsl
wasm_modules/loading_images/src/: lib.rs
wasm_modules/storage_buffers/: Cargo.toml
wasm_modules/storage_buffers/shader/: render.wgsl
wasm_modules/storage_buffers/src/: lib.rs
wasm_modules/textures/: Cargo.toml
wasm_modules/textures/shader/: frag.wgsl  render.wgsl  vert.wgsl
wasm_modules/textures/src/: lib.rs
wasm_modules/uniforms/: Cargo.toml
wasm_modules/uniforms/shader/: frag.wgsl  render.wgsl
wasm_modules/uniforms/src/: lib.rs
wasm_modules/vertex_buffers/: Cargo.toml
wasm_modules/vertex_buffers/shader/: render.wgsl
wasm_modules/vertex_buffers/src/: lib.rs
wasm_modules_initialization/: fundamentals_init.js  inter_stage_variables_init.js  loading_images_init.js  storage_buffers_init.js  textures_init.js  uniforms_init.js  vertex_buffers_init.js
