[package]
name = "fundamentals"
version = "0.1.0"
author = ["roman shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.86"

web-sys = { version = "0.3.63", features = [
    "GpuDevice",
    "GpuCanvasContext",
    "GpuTextureFormat",
    "GpuShaderModuleDescriptor",
    "GpuShaderModule",
    "GpuVertexState",
    "GpuColorTargetState",
    "GpuFragmentState",
    "GpuRenderPipelineDescriptor",
    "GpuRenderPipeline",
    "GpuRenderPassColorAttachment",
    "GpuLoadOp",
    "GpuStoreOp",
    "GpuColorDict",
    "GpuRenderPassDescriptor",
    "GpuTexture",
    "GpuTextureView",
    "GpuCommandEncoder",
    "GpuRenderPassDescriptor",
    "GpuRenderPassEncoder",
    "GpuCommandBuffer",
    "GpuQueue",
] }

js-sys = "0.3.63"
