[package]
name = "loading_images"
version = "0.1.0"
authors = ["roman shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"

web-sys = { version = "0.3.66", features = [
    "GpuDevice",
    "GpuCanvasContext",
    "GpuTextureFormat",
    "GpuShaderModuleDescriptor",
    "GpuShaderModule",
    "GpuVertexState",
    "GpuColorTargetState",
    "GpuFragmentState",
    "GpuRenderPipelineDescriptor",
    "GpuRenderPipeline",
    "GpuRenderPassColorAttachment",
    "GpuLoadOp",
    "GpuStoreOp",
    "GpuColorDict",
    "GpuRenderPassDescriptor",
    "GpuTexture",
    "GpuTextureView",
    "GpuCommandEncoder",
    "GpuRenderPassDescriptor",
    "GpuRenderPassEncoder",
    "GpuCommandBuffer",
    "GpuQueue",
    "GpuVertexBufferLayout",
    "GpuVertexAttribute",
    "GpuVertexFormat",
    "GpuVertexStepMode",
    "GpuIndexFormat",
    "GpuTextureDescriptor",
    "gpu_texture_usage",
    "GpuExtent3dDict",
    "GpuSampler",
    "GpuBindGroupEntry",
    "GpuBindGroupDescriptor",
    "GpuBindGroupLayout",
    "GpuBindGroup",
    "GpuSamplerDescriptor",
    "GpuAddressMode",
    "GpuFilterMode",
    "CanvasRenderingContext2d",
    "ImageBitmap",
    "GpuImageCopyExternalImage",
    "GpuImageCopyTextureTagged",
    "GpuPrimitiveState",
    "GpuPrimitiveTopology",
    "GpuBindGroupLayoutDescriptor",
    "GpuBindGroupLayoutEntry",
    "gpu_shader_stage",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuTextureBindingLayout",
    "GpuSamplerBindingLayout",
    "GpuBlendState",
    "GpuBlendComponent",
    "GpuBlendFactor",
    "GpuBlendOperation",    
] }

js-sys = "0.3.66"

rand = "0.8.5"
getrandom = { version = "0.2.11", features = ["js"] }

mat4 = "0.2.1"
